testdata/result/expr/bad_plus.sql.txt
--- bad_plus.sql
1 +

--- Error
syntax error: testdata/input/expr/bad_plus.sql:2:1: unexpected token: <eof>

  2:  
      ^


--- AST
&ast.BadNode{
  NodeEnd: 3,
  Raw:     "1 +",
}

--- SQL
1 +
